--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@inlet/react-pixi": "^6.8.0",
     "@testing-library/jest-dom": "^5.0.0",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^14.0.0",
@@ -23,9 +24,10 @@
     "eslint-plugin-react": "^7.31.8",
     "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^8.0.1",
+    "pixi.js": "^6.1.0",
     "prettier": "^2.7.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-scripts": "5.0.1",
     "react-test-renderer": "^18.2.0",
     "typescript": "^4.4.2",
