--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^4.0.0",
     "@inlet/react-pixi": "^6.8.0",
     "@testing-library/jest-dom": "^5.0.0",
     "@testing-library/react": "^13.0.0",
