--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "@ant-design/icons": "^4.0.0",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "@inlet/react-pixi": "^6.8.0",
     "@testing-library/jest-dom": "^5.0.0",
     "@testing-library/react": "^13.0.0",
