--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@inlet/react-pixi": "^6.8.0",
     "@testing-library/jest-dom": "^5.0.0",
     "@testing-library/react": "^12.0.0",
+    "@testing-library/react-hooks": "^8.0.1",
     "@testing-library/user-event": "^14.0.0",
     "@types/jest": "^29.0.0",
     "@types/node": "^18.0.0",
