--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "pixi.js": "^6.1.0",
     "prettier": "^2.7.1",
     "react": "^17.0.2",
+    "react-app-rewired": "^2.2.1",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.1",
     "react-test-renderer": "^17.0.0",
@@ -39,10 +40,10 @@
     "web-vitals": "^2.1.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
+    "eject": "react-app-rewired eject",
     "test:coverage": "yarn test --coverage",
     "test:CI": "cross-env CI=true yarn test",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
