--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-dom": "^18.0.0",
     "@types/react-test-renderer": "^17.0.0",
     "antd": "^4.23.6",
+    "canvas": "^2.11.0",
     "cross-env": "^7.0.3",
     "eslint": "^8.24.0",
     "eslint-config-prettier": "^8.5.0",
@@ -29,6 +30,7 @@
     "eslint-plugin-react": "^7.31.8",
     "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^8.0.1",
+    "jest-webgl-canvas-mock": "^0.2.3",
     "pixi.js": "^6.1.0",
     "prettier": "^2.7.1",
     "react": "^17.0.2",
